[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Delphi/AXA.pas


    //지정한 여러 입력 모듈에 허용 입력 전압 범위를 확인한다.
    //==================================================================================================//
    // lModuleNo   : 사용할 입력 모듈 번호
    //
    // RTEX AI16F
    // *dMinVolt   : -5V, -10V
    // *dMaxVolt   : +5V, +10V
    //==================================================================================================//
function  AxaiGetRangeModule(lModuleNo : LongInt; dpMinVolt : PDouble; dpMaxVolt : PDouble) : DWord; stdcall;

    //지정한 여러 입력 채널에 허용 입력 전압 범위를 설정한다.
    //==================================================================================================//
    // lSize       : 사용할 입력 채널의 개수
    // *lpChannelNo: 사용할 채널 번호의 배열
    //
    // AI4RB
    // dMinVolt    : -10V/-5V/0V로 설정 가능
    // dMaxVolt    : 10V/5V/로 설정 가능
    //
    // AI16Hx
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
function AxaiSetMultiRange (lSize : LongInt; lpChannelNo : PLongInt; dMinVolt : Double; dMaxVolt : Double) : DWord; stdcall;

    //지정한 입력 모듈에 트리거 모드를 설정한다.
    //==================================================================================================//
    // uTriggerMode: NORMAL_MODE(1)   --> 사용자가 원하는 시점에 A/D변환하는 Software Trigger 방식 
    //             : TIMER_MODE(2)    --> H/W의 내부 클럭을 이용해서 A/D변환하는 Trigger 방식
    //             : EXTERNAL_MODE(3) --> 외부 입력단자의 클럭을 이용해서 A/D변환하는 Trigger 방식
    //==================================================================================================//
function AxaiSetTriggerMode (lModuleNo : LongInt; uTriggerMode : DWord) : DWord; stdcall;

    //지정한 모듈에 트리거 모드를 확인한다.
    //==================================================================================================//
    // *upTriggerMode : NORMAL_MODE(1) --> 사용자가 원하는 시점에 A/D변환하는 Software Trigger 방식 
    //                : TIMER_MODE(2) --> H/W의 내부 클럭을 이용해서 A/D변환하는 Trigger 방식
    //                : EXTERNAL_MODE(3) --> 외부 입력단자의 클럭을 이용해서 A/D변환하는 Trigger 방식
    //==================================================================================================//
function AxaiGetTriggerMode (lModuleNo : LongInt; upTriggerMode : PDWord) : DWord; stdcall;

    //지정한 입력모듈의 Offset을 mVolt 단위(mV)로 설정한다. 최대 -100~100mVolt
    //==================================================================================================//
    // dMiliVolt      : -100 ~ 100 
    //==================================================================================================//
function AxaiSetModuleOffsetValue(lModuleNo : LongInt; dMiliVolt : Double) : DWord; stdcall;

    //지정한 입력모듈의 Offset 값을 확인한다. mVolt 단위(mV)
    //==================================================================================================//
    // *dpMiliVolt    : -100 ~ 100 
    //==================================================================================================//
function AxaiGetModuleOffsetValue(lModuleNo : LongInt; dpMiliVolt : PDouble) : DWord; stdcall;

//========== 입력 모듈 A/D 변환 함수 ===================================================================
    //사용자가 지정한 입력 채널에 아날로그 입력 값을 A/D변환한 후 전압 값으로 반환한다.이 함수를 사용하기 전에 AxaiSetTriggerMode 함수를 사용하여 Normal Trigger Mode로 설정되어 있어야 한다.
function AxaiSwReadVoltage (lChannelNo : LongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 입력 채널에 아날로그 입력 값을 Digit 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
function AxaiSwReadDigit (lChannelNo : LongInt; upDigit : PDWord) : DWord; stdcall;

    //지정한 여러 입력 채널에 아날로그 입력 값을 전압 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
function AxaiSwReadMultiVoltage (lSize : LongInt; lpChannelNo : PLongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 여러 입력 채널에 아날로그 입력 값을 Digit 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
function AxaiSwReadMultiDigit (lSize : LongInt; lpChannelNo : PLongInt; upDigit : PDWord) : DWord; stdcall;

    //지정한 여러 입력 채널에 Immediate모드를 사용하기 위해 설정 값을 설정한다. 이 함수를 사용하기 전에 AxaiSetTriggerMode 함수를 사용하여 Timer Trigger Mode로 설정되어 있어야 한다.
function AxaiHwSetMultiAccess (lSize : LongInt; lpChannelNo : PLongInt; lpWordSize : PLongInt) : DWord; stdcall;

    //지정한 개수만큼 A/D변환 후 전압 값을 반환한다. 이 함수를 사용하기 전에 AxaiHwSetMultiAccess함수를 이용 설정값을 지정해야 하며 , AxaSetTriggerModeAdc 함수를 사용하여 Timer Trigger Mode로 설정되어 있어야 한다.
function AxaiHwStartMultiAccess (dpBuffer : PDouble) : DWord; stdcall;

    //지정한 모듈에 샘플링 간격을 주파수(Hz) 단위로 설정한다.
    //==================================================================================================//
    // dSampleFreq     : 10 ~ 100000 
    //==================================================================================================//
function AxaiHwSetSampleFreq (lModuleNo : LongInt; dSampleFreq : Double) : DWord; stdcall;

    //지정한 모듈에 샘플링 간격을 주파수(Hz) 단위로 설정된 값을 확인한다.
    //==================================================================================================//
    // *dpSampleFreq   : 10 ~ 100000 
    //==================================================================================================//
function AxaiHwGetSampleFreq (lModuleNo : LongInt; dpSampleFreq : PDouble) : DWord; stdcall;

    //지정한 모듈에 샘플링 간격을 시간 단위(uSec)로 설정한다.
    //==================================================================================================//
    // dSamplePeriod   : 100000 ~ 1000000000
    //==================================================================================================//
function AxaiHwSetSamplePeriod (lModuleNo : LongInt; dSamplePeriod : Double) : DWord; stdcall;

    //지정한 모듈에 샘플링 간격을 시간 단위(uSec)로 설정된 값을 확인한다.
    //==================================================================================================//
    // *dpSamplePeriod : 100000 ~ 1000000000
    //==================================================================================================//
function AxaiHwGetSamplePeriod (lModuleNo : LongInt; dpSamplePeriod : PDouble) : DWord; stdcall;

    //지정한 입력 채널에 버퍼가 Full로 찼을 때 관리 방식을 설정한다.
    //==================================================================================================//
    // uFullMode       : NEW_DATA_KEEP(0)  --> 새로운 데이터 유지
    //                 : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
function AxaiHwSetBufferOverflowMode (lChannelNo : LongInt; uFullMode : DWord) : DWord; stdcall;

    //지정한 입력 채널이 버퍼가 Full로 찼을 때 관리 방식을 확인한다.
    //==================================================================================================//
    // *upFullMode     : NEW_DATA_KEEP(0)  --> 새로운 데이터 유지
    //                 : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
function AxaiHwGetBufferOverflowMode (lChannelNo : LongInt; upFullMode : PDWord) : DWord; stdcall;

    //지정한 여러 입력 채널에 버퍼가 Full로 찼을 때 관리 방식을 설정한다.
    //==================================================================================================//
    // uFullMode       : NEW_DATA_KEEP(0)  --> 새로운 데이터 유지
    //                 : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
function AxaiHwSetMultiBufferOverflowMode (lSize : LongInt; lpChannelNo : PLongInt; uFullMode : DWord) : DWord; stdcall;

    //지정한 입력 채널에 버퍼의 상한 값과 하한 값을 설정한다.
function AxaiHwSetLimit (lChannelNo : LongInt; lLowLimit : LongInt; lUpLimit : LongInt) : DWord; stdcall;

    //지정한 입력 채널에 버퍼의 상한 값과 하한 값을 확인한다.
function AxaiHwGetLimit (lChannelNo : LongInt; lpLowLimit : PLongInt; lpUpLimit : PLongInt) : DWord; stdcall;

    //지정한 여러 입력 채널에 버퍼의 상한 값과 하한 값을 설정한다.
function AxaiHwSetMultiLimit (lSize : LongInt; lpChannelNo : PLongInt; lLowLimit : LongInt; lUpLimit : LongInt) : DWord; stdcall;

    //지정한 여러 입력 채널에 H/W타이머를 이용한 A/D변환을 시작한다.
function AxaiHwStartMultiChannel (lSize : LongInt; lpChannelNo : PLongInt; lBuffSize : LongInt) : DWord; stdcall;

    //지정한 여러 입력 채널에 A/D변환을 시작 후 지정한 개수만큼 필터 처리해서 전압으로 반환한다.
    //==================================================================================================//
    // lSize        : 사용할 입력 채널의 개수
    // *lpChannelNo : 사용할 채널 번호의 배열
    // lFilterCount : Filtering할 데이터의 개수
    // lBuffSize    : 각 채널에 할당되는 버퍼의 개수
    //==================================================================================================//
function AxaiHwStartMultiFilter (lSize : LongInt; lpChannelNo : PLongInt; lFilterCount : LongInt; lBuffSize : LongInt) : DWord; stdcall;

    //H/W타이머를 이용한 연속 신호 A/D변환을 중지한다.
function AxaiHwStopMultiChannel (lModuleNo : LongInt) : DWord; stdcall;

    //지정한 입력 채널의 메모리 버퍼에 데이터가 몇 개인지 검사한다.
function AxaiHwReadDataLength (lChannelNo : LongInt; lpDataLength : PLongInt) : DWord; stdcall;

    //지정한 입력 채널에 H/W타이머를 이용하여 A/D변환된 값을 전압 값으로 읽는다.
function AxaiHwReadSampleVoltage (lChannelNo : LongInt; lSize : PLongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 입력 채널에 H/W타이머를 이용하여 A/D변환된 값을 Digit 값으로 읽는다.
function AxaiHwReadSampleDigit (lChannelNo : LongInt; lSize : PLongInt; upDigit : PDWord) : DWord; stdcall;

//========== 입력 모듈 버퍼 상태 체크 함수 ===================================================================================
    //지정한 입력 채널의 메모리 버퍼에 데이터가 없는 지 검사한다.
    //==================================================================================================//
    // *upEmpty     : FALSE(0) --> 메모리 버퍼에 데이터가 있을 경우
    //              : TRUE(1)  --> 메모리 버퍼에 데이터가 없을 경우
    //==================================================================================================//
function AxaiHwIsBufferEmpty (lChannelNo : LongInt; upEmpty : PDWord) : DWord; stdcall;

    //지정한 입력 채널의 메모리 버퍼에 설정되어 있는 상한 값보다 데이터가 많은 지 검사한다
    //==================================================================================================//
    // *upUpper     : FALSE(0) --> 메모리 버퍼에 데이터가 상한 값보다 적을 경우
    //              : TRUE(1)  --> 메모리 버퍼에 데이터가 상한 값보다 많을 경우
    //==================================================================================================//
function AxaiHwIsBufferUpper (lChannelNo : LongInt; upUpper : PDWord) : DWord; stdcall;

    //지정한 입력 채널의 메모리 버퍼에 설정되어 있는 하한 값보다 데이터가 적은 지 검사한다.
    //==================================================================================================//
    // *upLower     : FALSE(0) --> 메모리 버퍼에 데이터가 하한 값보다 많을 경우
    //              : TRUE(1)  --> 메모리 버퍼에 데이터가 하한 값보다 적을 경우
    //==================================================================================================//
function AxaiHwIsBufferLower (lChannelNo : LongInt; upLower : PDWord) : DWord; stdcall;
